--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /venv
-/appj-metadata.md
-/markdown-table.md
+/markdown-table-test.md
+/markdown-table-test-elab-descriptionlist.tpl
+/markdown-table-test-json-schema.json
