--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 /markdown-table-test.md
 /markdown-table-test-elab-descriptionlist.tpl
 /markdown-table-test-json-schema.json
+/experiment-new.md_
+/version_1/markdown-table-test-elab-descriptionlist.tpl
+/version_1/markdown-table-test.md_
+/version_1/markdown-table-test-json-schema.json
